dgx-test/ssd/20211117/gpu=full_4gpu_x_2pod/run20211117_20211118_085448_130672/stderr
  File "/home/kevin/openshift/matrix_benchmark/exec/mlperf/run_ssd.py", line 378
    if !(run_time % 1) and wait_time != printed_time:
       ^
SyntaxError: invalid syntax
